--- a/Resources/Public/Css/newscal.css
+++ b/Resources/Public/Css/newscal.css
@@ -1,1 +1,87 @@
-.newscal{padding:10px}.newscal table.calendar{margin-left:auto;margin-right:auto}.newscal table.calendar .title th{text-align:center}.newscal table.calendar .days th{text-align:center}.newscal table.calendar td.othermonth{color:#999}.newscal table.calendar td a{font-weight:bold}.newscal table.calendar div.eventday{position:relative}.newscal table.calendar div.eventday ul.events{list-style:none;padding:5px;margin:0;background:white;border:1px solid black;z-index:100;display:none;position:absolute;right:-200px;top:0;width:200px}.newscal table.calendar div.eventday ul.events li{margin:0;padding:0;font-size:10px;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}.newscal table.calendar div.eventday:hover{cursor:pointer}.newscal table.calendar div.eventday:hover ul.events{display:block}.newscal .left{float:left}.newscal .right{float:right}
+.newscal {
+  padding: 10px;
+  text-align: center;
+}
+.newscal .navigation {
+  font-size: 120%;
+  padding-top: 20px;
+}
+.newscal .calwrap {
+  display: inline-block;
+  vertical-align: top;
+  margin: 15px 10px 10px 10px;
+}
+.newscal table.calendar {
+  margin-left: auto;
+  margin-right: auto;
+  border: none;
+  border-spacing: 0;
+}
+.newscal table.calendar th, .newscal table.calendar td {
+  margin: 0;
+  text-align: center;
+}
+.newscal table.calendar .title th {
+  text-align: center;
+  background: blue;
+  color: white;
+  font-size: 120%;
+}
+.newscal table.calendar .days th {
+  text-align: center;
+  background: #ccc;
+}
+.newscal table.calendar td.othermonth {
+  color: #999;
+}
+.newscal table.calendar td.day6, .newscal table.calendar td.day7 {
+  background: #eee;
+}
+.newscal table.calendar td.today {
+  font-weight: bold;
+  color: red;
+}
+.newscal table.calendar td.hasevents .eventday {
+  background: blue;
+  color: white;
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+}
+.newscal table.calendar div.eventday {
+  position: relative;
+}
+.newscal table.calendar div.eventday ul.events {
+  text-align: left;
+  list-style: none;
+  padding: 5px;
+  margin: 0;
+  background: white;
+  border: 1px solid black;
+  z-index: 100;
+  display: none;
+  position: absolute;
+  right: -200px;
+  top: 0;
+  width: 200px;
+}
+.newscal table.calendar div.eventday ul.events li {
+  margin: 0;
+  padding: 0;
+  font-size: 10px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.newscal table.calendar div.eventday:hover {
+  cursor: pointer;
+}
+.newscal table.calendar div.eventday:hover ul.events {
+  display: block;
+}
+.newscal .left {
+  float: left;
+}
+.newscal .right {
+  float: right;
+}
