--- a/Resources/Private/Partials/Newscal/Calendar.html
+++ b/Resources/Private/Partials/Newscal/Calendar.html
@@ -5,7 +5,15 @@
 	<c:calendar newsList="{news}" year="{demand.year}" month="{demand.month}"
 	            firstDayOfWeek="{settings.firstDayOfWeek}">
 		<tr class="title">
-			<th colspan="7"><f:translate id="month.<f:format.printf arguments='{0: demand.month}'>%02d</f:format.printf>" extensionName="news"></f:translate> {demand.year}</th>
+			<th colspan="7">
+				<f:if condition="{settings.hidePagination} == 0">
+					<f:if condition="{navigation.numberOfMonths} == 1">
+						<f:render partial="Newscal/Navigation"
+						          arguments="{demand:demand, navigation:navigation}"></f:render>
+					</f:if>
+				</f:if>
+				<f:translate id="month.<f:format.printf arguments='{0: demand.month}'>%02d</f:format.printf>" extensionName="news"></f:translate> {demand.year}
+			</th>
 		</tr>
 		<tr class="days">
 			<f:for each="{weeks.0}" as="day">
