--- a/Resources/Private/Templates/Newscal/Calendar.html
+++ b/Resources/Private/Templates/Newscal/Calendar.html
@@ -6,13 +6,15 @@
 <f:section name="content">
 	<div class="newscal">
 		<f:if condition="{settings.hidePagination} == 0">
-			<f:render partial="Newscal/Navigation"
-			          arguments="{demand:demand, navigation:navigation}"></f:render>
+			<f:if condition="{navigation.numberOfMonths} > 1">
+				<f:render partial="Newscal/Navigation"
+				          arguments="{demand:demand, navigation:navigation}"></f:render>
+			</f:if>
 		</f:if>
 		<f:for each="{calendars}" as="calendar" iteration="iteration">
 			<div class="calwrap{f:if(condition:'{iteration.index} == {settings.monthsBefore}',then:' curmonth')}">
 			<f:render partial="Newscal/Calendar"
-			          arguments="{news:calendar.news, demand:calendar.demand, uid:uid, settings:settings, iteration:iteration}"></f:render>
+			          arguments="{news:calendar.news, demand:calendar.demand, uid:uid, settings:settings, iteration:iteration, navigation:navigation}"></f:render>
 			</div>
 		</f:for>
 	</div>
