--- a/Resources/Public/Css/newscal.css
+++ b/Resources/Public/Css/newscal.css
@@ -21,6 +21,12 @@
   margin: 0;
   text-align: center;
 }
+.newscal table.calendar td {
+  padding: 0;
+}
+.newscal table.calendar th, .newscal table.calendar td .day {
+  padding: 9px;
+}
 .newscal table.calendar .title th {
   text-align: center;
   background: blue;
@@ -46,17 +52,28 @@
   font-weight: bold;
   color: red;
 }
-.newscal table.calendar td.hasevents .eventday {
+.newscal table.calendar td.hasevents .day {
   background: blue;
   color: white;
-  -moz-border-radius: 50%;
-  -webkit-border-radius: 50%;
-  border-radius: 50%;
-}
-.newscal table.calendar div.eventday {
   position: relative;
 }
-.newscal table.calendar div.eventday ul.events {
+.newscal table.calendar td.hasevents .day.startev {
+  -moz-border-radius-topleft: 50%;
+  -webkit-border-top-left-radius: 50%;
+  border-top-left-radius: 50%;
+  -moz-border-radius-bottomleft: 50%;
+  -webkit-border-bottom-left-radius: 50%;
+  border-bottom-left-radius: 50%;
+}
+.newscal table.calendar td.hasevents .day.endev {
+  -moz-border-radius-topright: 50%;
+  -webkit-border-top-right-radius: 50%;
+  border-top-right-radius: 50%;
+  -moz-border-radius-bottomright: 50%;
+  -webkit-border-bottom-right-radius: 50%;
+  border-bottom-right-radius: 50%;
+}
+.newscal table.calendar td.hasevents .day ul.events {
   text-align: left;
   list-style: none;
   padding: 5px;
@@ -70,7 +87,7 @@
   top: 0;
   width: 200px;
 }
-.newscal table.calendar div.eventday ul.events li {
+.newscal table.calendar td.hasevents .day ul.events li {
   margin: 0;
   padding: 0;
   font-size: 10px;
@@ -78,10 +95,10 @@
   overflow: hidden;
   text-overflow: ellipsis;
 }
-.newscal table.calendar div.eventday:hover {
+.newscal table.calendar td.hasevents .day:hover {
   cursor: pointer;
 }
-.newscal table.calendar div.eventday:hover ul.events {
+.newscal table.calendar td.hasevents .day:hover ul.events {
   display: block;
 }
 .newscal .left {
