--- a/Resources/Private/Templates/Newscal/Calendar.html
+++ b/Resources/Private/Templates/Newscal/Calendar.html
@@ -8,13 +8,13 @@
 		<f:if condition="{settings.hidePagination} == 0">
 			<f:if condition="{navigation.numberOfMonths} > 1">
 				<f:render partial="Newscal/Navigation"
-				          arguments="{demand:demand, navigation:navigation}"></f:render>
+				          arguments="{navigation:navigation}"></f:render>
 			</f:if>
 		</f:if>
 		<f:for each="{calendars}" as="calendar" iteration="iteration">
 			<div class="calwrap{f:if(condition:'{iteration.index} == {settings.monthsBefore}',then:' curmonth')}">
 			<f:render partial="Newscal/Calendar"
-			          arguments="{news:calendar.news, demand:calendar.demand, uid:uid, settings:settings, iteration:iteration, navigation:navigation}"></f:render>
+			          arguments="{calendar:calendar, settings:settings, iteration:iteration, navigation:navigation}"></f:render>
 			</div>
 		</f:for>
 	</div>
