--- a/Resources/Private/Partials/Newscal/Calendar.html
+++ b/Resources/Private/Partials/Newscal/Calendar.html
@@ -30,7 +30,7 @@
 </table>
 
 <f:section name="calday">
-	<td class="day{f:format.date(date: day.ts, format: 'N')} {f:if(condition: '{day.curmonth}', then: 'curmonth', else: 'othermonth')}{f:if(condition: '{day.news}', then: ' hasevents')}{f:if(condition: '{day.curday}', then: ' today')}">
+	<td class="day{f:format.date(date: day.ts, format: 'N')} {f:if(condition: '{day.curmonth}', then: 'curmonth', else: 'othermonth')}{f:if(condition: '{day.news}', then: ' hasevents')}{f:if(condition: '{day.curday}', then: ' today')}{f:if(condition:'{day.startev}', then: ' startev')}{f:if(condition:'{day.endev}', then: ' endev')}">
 		<f:if condition="{day.news}"><f:then>
 			<f:render section="dayevents" arguments="{day:day, settings:settings}"></f:render>
 		</f:then>
@@ -42,7 +42,7 @@
 </f:section>
 
 <f:section name="dayevents">
-	<div class="day{f:if(condition:'{day.startev}', then: ' startev')}{f:if(condition:'{day.endev}', then: ' endev')}">{day.day}
+	<div class="day">{day.day}
 		<ul id="d{day.day}" class="events">
 			<f:for each="{day.news}" as="newsItem">
 				<li><n:link newsItem="{newsItem}" settings="{settings}">
