--- a/Resources/Private/Scss/newscal.scss
+++ b/Resources/Private/Scss/newscal.scss
@@ -4,6 +4,8 @@
 
 $primary-color: blue;
 $secondary-color: #ccc;
+$paddingevin: 5px;
+$paddingevout: 4px;
 
 
 .newscal {
@@ -33,10 +35,13 @@ $secondary-color: #ccc;
 		}
 
 		td {
-			padding: 0;
+			padding: $paddingevout 0;
+			.day {
+				padding: $paddingevin 9px;
+			}
 		}
 
-		th, td .day {
+		th {
 			padding: 9px;
 		}
 
@@ -67,41 +72,49 @@ $secondary-color: #ccc;
 			font-weight: bold;
 			color: red;
 		}
-		td.hasevents .day {
-			background: $primary-color;
-			color: white;
-			&.startev {
-				@include border-left-radius(50%);
-			}
-			&.endev {
-				@include border-right-radius(50%);
-			}
-
-			position: relative;
-		
-			ul.events {
-				text-align: left;
-				list-style: none;
-				padding: 5px;
-				margin: 0;
-				background: white;
-				border: 1px solid black;
-				z-index: 100;
-				display: none;
-				position: absolute;
-				right: -200px;
-				top: 0;
-				width: 200px;
-				li {
+		td.hasevents {
+			.day {
+				background: $primary-color;
+				color: white;
+				position: relative;
+			
+				ul.events {
+					text-align: left;
+					list-style: none;
+					padding: 5px;
 					margin: 0;
-					padding: 0;
-					font-size: 10px;
-					white-space: nowrap;
-					overflow: hidden;
-					text-overflow: ellipsis;
+					background: white;
+					border: 1px solid black;
+					z-index: 100;
+					display: none;
+					position: absolute;
+					right: -200px;
+					top: 0;
+					width: 200px;
+					li {
+						margin: 0;
+						padding: 0;
+						font-size: 10px;
+						white-space: nowrap;
+						overflow: hidden;
+						text-overflow: ellipsis;
+					}
 				}
 			}
-	
+			&.startev {
+				padding-left: $paddingevout;
+				.day {
+					padding-left: $paddingevin;
+					@include border-left-radius(50%);
+				}
+			}
+			&.endev {
+				padding-right: $paddingevout;
+				.day {
+					padding-right: $paddingevin;
+					@include border-right-radius(50%);
+				}
+			}
 			&:hover {
 				cursor: pointer;
 				ul.events {
