--- a/Resources/Private/Partials/Newscal/Navigation.html
+++ b/Resources/Private/Partials/Newscal/Navigation.html
@@ -1,7 +1,11 @@
 {namespace n=Tx_News_ViewHelpers}
 
-<f:render section="navlink" arguments="{text: '◀', month: navigation.prev.month, year: navigation.prev.year, uid: navigation.uid, class:'left'}"></f:render>
-<f:render section="navlink" arguments="{text: '▶', month: navigation.next.month, year: navigation.next.year, uid: navigation.uid, class:'right'}"></f:render>
+<f:if condition="{navigation.prev}">
+	<f:render section="navlink" arguments="{text: '◀', month: navigation.prev.month, year: navigation.prev.year, uid: navigation.uid, class:'left'}"></f:render>
+</f:if>
+<f:if condition="{navigation.next}">
+	<f:render section="navlink" arguments="{text: '▶', month: navigation.next.month, year: navigation.next.year, uid: navigation.uid, class:'right'}"></f:render>
+</f:if>
 
 
 <f:section name="navlink">
