--- a/Resources/Private/Partials/Newscal/Navigation.html
+++ b/Resources/Private/Partials/Newscal/Navigation.html
@@ -1,4 +1,4 @@
-{namespace n=Tx_News_ViewHelpers}
+{namespace n=GeorgRinger\News\ViewHelpers}
 
 <f:if condition="{navigation.prev}">
 	<f:render section="navlink" arguments="{text: '◀', month: navigation.prev.month, year: navigation.prev.year, uid: navigation.uid, class:'left'}"></f:render>
